--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,196 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Функциональное питание для котов Cat Energy</title>
   </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
+  <body class="page__body">
+    <div class="wrapper">
+      <header class="main-header">
+        <div class="main-header__container container">
+          <nav class="header__nav nav">
+            <a class="nav__logo" href="index.html" aria-current="page">
+            <img src="" alt="логотип Cat Energy" />
+            </a>
+            <img src="" alt="Cat Energy" />
+            <button class="nav__toggle" type="button" aria-label="Открыть/закрыть меню"></button>
 
+             <div class="nav__wrapper">
+               <ul class="nav__list list-reset">
+                <li class="nav__item">
+                   <a class="nav__link" href="index.html" aria-current="page">Главная</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="catalog.html">Каталог продукции</a>
+                 </li>
+                 <li class="nav__item">
+                  <a class="nav__link" href="form.html">Подбор продукции</a>
+                </li>
+              </ul>
+             </div>
+          </nav>
+          <h1 class="visually-hidden">Cat Energy - функциональное питание для котов</h1>
+
+          <section class="hero">
+          <div class="hero__wrapper" >
+            <h2 class="hero__title">Функциональное питание для котов</h2>
+           <p class="hero__text">Занялся собой? Займись котом!</p>
+          <a class="button" href="#">Подобрать программу</a>
+         </div>
+          <img src="" alt="Банка Cat Energy со вкусом курицы">
+          </section>
+        </div>
+      </header>
+
+
+      <main class="main-container">
+        <section class="programs">
+          <div class="programs__container container>
+            <h2 class="visually-hidden">Программы питания</h2>
+            <ul class="programs__list">
+              <li class="programs__item programs__item--slim">
+                <h3 class="programs__title">Похудение</h3>
+                <p class="programs__description">
+                  Ваш кот весит больше собаки и почти утратил способность лазить по
+                  деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу
+                  сбросить лишний вес.
+                </p>
+                <a class="programs__link" href="#">Каталог Slim</a>
+              </li>
+              <li class="programs__item programs__item--pro">
+                <h3 class="programs__title">Набор массы</h3>
+                <p class="programs__description">
+                  Заработать авторитет среди дворовых котов и даже собак? Серия Cat
+                  Energy Pro поможет вашему коту нарастить необходимые мышцы!
+                </p>
+                <a class="programs__link" href="#">Каталог Pro</a>
+              </li>
+            </ul>
+          </div>
+        </section>
+
+        <section class="advantages">
+          <div class="advantages__container container">
+            <h2 class="advantages__title">Как это работает</h2>
+            <ul class="advantages__list">
+              <li class="advantages__item advantages__item--leaf">
+                <p class="advantages__description">
+                  Функциональное питание содержит только полезные питательные
+                  вещества.
+                </p>
+              </li>
+              <li class="advantages__item advantages__item--water">
+                <p class="advantages__description">
+                  Выпускается в виде порошка, который нужно лишь залить кипятком и
+                  готово.
+                </p>
+              </li>
+              <li class="advantages__item advantages__item--food">
+                <p class="advantages__description">
+                  Замените один-два приема обычной еды на наше функциональное
+                  питание.
+                </p>
+              </li>
+              <li class="advantages__item advantages__item--watch">
+                <p class="advantages__description">
+                  Уже через месяц наслаждайтесь изменениями к лучшему вашего
+                  питомца!
+                </p>
+              </li>
+            </ul>
+          </div>
+        </section>
+
+        <section class="example">
+          <div class="example__container container">
+            <h2 class="example__title">Живой пример</h2>
+            <p class="example__description">
+              Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на
+              Cat Energy Slim. Отличный результат без изнуряющих тренировок! При
+              этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+            </p>
+            <dl class="example__list">
+              <div class="example__item">
+                <dt class="example__term">Снижение веса</dt>
+                <dd class="example__definition">5 кг</dd>
+              </div>
+              <div class="example__item">
+                <dt class="example__term">Затрачено времени</dt>
+                <dd class="example__definition">60 дней</dd>
+              </div>
+            </dl>
+            <p class="example__cost">Затраты на питание: <span>15 000 руб.</span></p>
+
+            <div class="example__comparison slider">
+              <div class="slider__container">
+                <div class="slider__img slider__img--after"></div>
+                <div class="slider__img slider__img--before"></div>
+              </div>
+              <div class="slider-change"></div>
+            </div>
+          </div>
+        </section>
+
+        <section class="map">
+          <div class="map__container container">
+            <div class="map__description-container">
+              <h2 class="visually-hidden">Местонахождение на карте</h2>
+              <p class="map__description">Приглашаем к сотрудничеству дилеров!</p>
+              <address class="map__address">
+                ул. Большая Конюшенная, д. 19/8</address> <span>Санкт-Петербург</span>
+            </div>
+            <div class="map__iframe-container">
+              <noscript>
+                <a class="map__img" href="#">
+                  <img src="" alt="">
+                </a>
+              </noscript>
+              <div class="map__iframe"></div>
+            </div>
+          </div>
+
+        </section>
+      </main>
+
+      <footer class="footer">
+        <div class="footer__container container">
+          <a class="footer__logo" href="catalog.html" aria-current="page">
+            <img src="" alt="текстовый логотип Cat Energy" />
+          </a>
+          <div class="footer__social-wrapper">
+            <ul class="footer__social-list">
+              <li class="footer__social-item">
+                <a class="footer__social-link" href="https://vk.com/htmlacademy">
+                  <span class="visually-hidden">Мы во Вконтакте.</span>
+                </a>
+              </li>
+              <li class="footer__social-item">
+                <a
+                  class="footer__social-link"
+                  href="https://www.youtube.com/user/htmlacademyru"
+                >
+                  <span class="visually-hidden">Мы на Youtube.</span>
+                </a>
+              </li>
+              <li class="footer__social-item">
+                <a
+                  class="footer__social-link"
+                  href="tg://resolve?domain=htmlacademy"
+                >
+                  <span class="visually-hidden">Мы в Telegram.</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+
+            <a class="footer__copyright-link" href="" target="_blank">
+              <span class="footer__copyright-academy">HTML Academy:</span>
+            </a>
+          </span>
+        </div>
+      </footer>
+  </div>
   </body>
 </html>
